--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "bip39": "^3.1.0",
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
+    "dotenv": "^17.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.9.3",
     "vite": "^5.4.0"
   }
 }
